--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ __pycache__
 cmake_build/
 .idea/**
 /build/
-[Bb]uild/
+*[Bb]uild/
 /tensorflow/core/util/version_info.cc
 /tensorflow/python/framework/fast_tensor_util.cpp
 Pods
@@ -29,6 +29,7 @@ Podfile.lock
 /tensorflow/contrib/lite/examples/ios/simple/data/*.tflite
 xcuserdata/**
 /api_init_files_list.txt
+/estimator_api_init_files_list.txt
 
 # Android
 .gradle
