pass mkl/mkldnn build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,7 @@ include(re2)
 include(cub)
 include(sqlite)
 include(double_conversion)
+include(swig)
 if(tensorflow_BUILD_CC_TESTS)
   include(googletest)
 endif()
