--- a/tensorflow/cc/tutorials/CMakeLists.txt
+++ b/tensorflow/cc/tutorials/CMakeLists.txt
@@ -31,7 +31,7 @@ add_executable(tf_tutorials_example_trainer
 
 target_link_libraries(tf_tutorials_example_trainer PUBLIC
     tf_protos_cc
-    ${tf_core_gpu_kernels_lib}
+    $<$<BOOL:${tensorflow_ENABLE_GPU}>:tf_core_gpu_kernels>
     ${tensorflow_EXTERNAL_LIBRARIES}
 )
 
