--- a/tensorflow/tools/CMakeLists.txt
+++ b/tensorflow/tools/CMakeLists.txt
@@ -76,7 +76,7 @@ add_executable(${transform_graph}
 
 target_link_libraries(${transform_graph} PUBLIC
   tf_protos_cc
-  ${tf_core_gpu_kernels_lib}
+  $<$<BOOL:${tensorflow_ENABLE_GPU}>:tf_core_gpu_kernels>
   ${tensorflow_EXTERNAL_LIBRARIES}
 )
 
@@ -98,7 +98,7 @@ add_executable(${summarize_graph}
 
 target_link_libraries(${summarize_graph} PUBLIC
   tf_protos_cc
-  ${tf_core_gpu_kernels_lib}
+  $<$<BOOL:${tensorflow_ENABLE_GPU}>:tf_core_gpu_kernels>
   ${tensorflow_EXTERNAL_LIBRARIES}
 )
 
@@ -120,7 +120,7 @@ add_executable(${compare_graphs}
 
 target_link_libraries(${compare_graphs} PUBLIC
   tf_protos_cc
-  ${tf_core_gpu_kernels_lib}
+  $<$<BOOL:${tensorflow_ENABLE_GPU}>:tf_core_gpu_kernels>
   ${tensorflow_EXTERNAL_LIBRARIES}
 )
 
@@ -141,7 +141,7 @@ add_executable(${benchmark_model}
 
 target_link_libraries(${benchmark_model} PUBLIC
   tf_protos_cc
-  ${tf_core_gpu_kernels_lib}
+  $<$<BOOL:${tensorflow_ENABLE_GPU}>:tf_core_gpu_kernels>
   ${tensorflow_EXTERNAL_LIBRARIES}
 )
 
